--- a/styles/media-queries.less
+++ b/styles/media-queries.less
@@ -26,7 +26,8 @@
 
         .first-view {
             display: block;
-            // height: 140vh;
+            height: 70%;
+            width: 100%;
 
 
             .main-container {
@@ -34,6 +35,24 @@
 
                 .header {
                     width: 100vw;
+                    background-color: black;
+                    color: white;
+
+                    .logo {
+                        color: #ff6669;
+                        margin-top: 15px;
+                        margin-left: 20px;
+                    }
+
+                    .menu-icon {
+                        .navicon {
+                            background-color: white;
+                        }
+
+                        .navicon:before, .navicon:after {
+                            background-color: white;
+                        }
+                    }
                     nav {
                         width: 80vw;
                         margin: 0 auto;
@@ -72,11 +91,14 @@
                             width: 90vw;
                             margin: 0 auto;
                             padding: 0;
-                            padding-top: 40px;
+                            // padding-top: 40px;
 
 
                             .main-text {
                                 display: block;
+                                height: 10%;
+                                padding: 0;
+                                margin: 0;
 
                                 h1 {
                                     font-size: 3.5em;
@@ -87,15 +109,16 @@
                                 }
                             }
                             .list {
-                                height: 100%;
+                                // height: 100%;
                                 margin-top: 1em;
                                 padding: 0;
 
                                 p{
-                                    font-size: 1.7em;
+                                    font-size: 1.9em;
                                     line-height: 1.2em;
                                     color: rgb(190, 190, 190);
                                     text-align: center;
+                                    margin-bottom: 10px;
                                 }
 
                                 button {
@@ -135,8 +158,9 @@
 
         .second-view {
             font-family: PT Serif;
+            width: 100%;
             .yellow-page {
-                height: 250vh;
+                height: 100%;
                 .top-text {
                     .head {
                         padding-top: 200px;
@@ -155,10 +179,10 @@
                         flex-direction: column;
                         justify-content: center;
                         align-items: center;
-                        width: 90vw;
+                        width: 100%;
                         padding-top: 10px;
                         img {
-                            width: 90vw;
+                            width: 70%;
                             max-width: 400px;
                             height: 100%;
                             margin: 0 auto;
@@ -168,7 +192,7 @@
                             padding-top: 28px;
                             font-size: 2.3em;
                             text-align: center;
-                            width: 400px;
+                            width: 80%;
                             font-family: 'Acme';
                             color: rgb(88, 88, 88);
                             line-height: 1.5;
@@ -200,6 +224,7 @@
             justify-content: center;
             text-align: center;
             font-size: 1.5em;
+            height: 100%;
         }
         
         
